# qs-qh

./: .gitignore  README.md  pyproject.toml
Module READMEs/: README circuits.md
Notes/: Roadmap.pptx  hexagonal_lattice_plot.ipynb  notes.tex  ~$Roadmap.pptx
logs/: jobs_qubits_[4, 8, 16, 32, 64]_depths_[4, 8, 16, 32, 64]_pauli-Z_weight_1_stat_shots_3_zne_False_mem_False.json  jobs_qubits_[4, 8, 16, 32, 64]_depths_[4, 8, 16, 32, 64]_pauli-Z_weight_1_stat_shots_3_zne_True_mem_False.json  jobs_qubits_[4, 8, 16, 32, 64]_depths_[4, 8, 16, 32, 64]_pauli-Z_weight_1_stat_shots_3_zne_True_mem_True.json  jobs_qubits_[4, 8]_depths_[4]_pauli-Z_weight_1_stat_shots_3.json
src/fradm/: circuits.py  execute_circuits.py  result_analysis.py  tn_test.py  utils.py
src/notebooks/: challenge_1.ipynb  jobs.json  zne.ipynb  zne_exercises.ipynb
src/notebooks/Layout/: vf2_graph_isomorphism.ipynb  z2hex_isomorphism.ipynb
src/notebooks/Z2/: Gauge dynamical decoupling quantification.ipynb  benchmarks.ipynb  (+23 more)
src/notebooks/Z2-hex/: mpo_construction_z2hex.ipynb
src/qs_qh/: circuits.py  execute_circuits.py  plotting.py  result_analysis.py  utils.py
src/utils/: benchmarking.py  circs.py  cronjob.py  hexec.py  odr.py  operations.py  paulis.py  paulisdiag.py  plotting.py  postselection.py  serverless.py  sexec.py
src/z2chain/: Z2HiggsChainDynamics.jl  benchmark.py  circs.py  exact.py  observables.py  operators.py  plotting.py  qiskit_observables.py  z2chaincircs.py
src/z2hex/: circs.py  geometry.py  operators.py  plotting.py
src/z2square/: mpo_construction_z2square.ipynb  tncirc.ipynb
(+104 files in other folders)
